K/kube-iptables-tailer-Y04c9YCBNWGc/kube-iptables-tailer.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: release-name-kube-iptables-tailer
  labels:
    app.kubernetes.io/name: kube-iptables-tailer
    helm.sh/chart: kube-iptables-tailer-0.2.3
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-iptables-tailer
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-iptables-tailer
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-kube-iptables-tailer
      containers:
        - name: kube-iptables-tailer
          image: honestica/kube-iptables-tailer:master-91
          imagePullPolicy: IfNotPresent
          command:
            - /kube-iptables-tailer
          volumeMounts:
            - name: iptables-logs
              mountPath: /var/log
              readOnly: true
          resources:
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: iptables-logs
          hostPath:
            path: /var/log
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: release-name-kube-iptables-tailer-logging
  labels:
    app.kubernetes.io/name: kube-iptables-tailer
    helm.sh/chart: kube-iptables-tailer-0.2.3
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  types:
    - Ingress
    - Egress
  ingress:
    - action: Log
      protocol: TCP
    - action: Allow
      protocol: TCP
    - action: Log
      protocol: UDP
    - action: Allow
      protocol: UDP
  egress:
    - action: Log
      protocol: TCP
    - action: Allow
      protocol: TCP
    - action: Log
      protocol: UDP
    - action: Allow
      protocol: UDP
